--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,21 @@
 [tox]
-envlist = py37, pep8
+envlist = py38,flake8
 skipsdist = True
 
 [testenv]
 deps =
-    django>=2.2
-    boto3>=1.9.181
+    -r{toxinidir}/requirements.txt
     coverage
 commands =
     coverage run --source='aws_pubsub' ./runtests.py
     coverage report -m
-[testenv:pylint]
+
+[testenv:flake8]
 deps =
-    django>=2.2
-    boto3>=1.9.181
-    pylint
-    pylint-django
+    black
+    flake8
+    flake8-bugbear
+    flake8-black
+    flake8-docstrings
 commands =
-    pylint --load-plugins pylint_django aws_pubsub --ignore='migrations'
+    flake8 .
