--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,17 @@
 [tox]
-envlist = py37, pep8
+envlist = py37
 skipsdist = True
 
 [testenv]
 deps =
-    django>=2.2
-    boto3>=1.9.181
+    -r{toxinidir}/requirements.txt
     coverage
 commands =
     coverage run --source='aws_pubsub' ./runtests.py
     coverage report -m
 [testenv:pylint]
 deps =
-    django>=2.2
-    boto3>=1.9.181
+    -r{toxinidir}/requirements.txt
     pylint
     pylint-django
 commands =
