POC working with MultiProcessing, REST for aws_pubsub sqs consumer

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37
+envlist = py38,flake8
 skipsdist = True
 
 [testenv]
@@ -9,10 +9,13 @@ deps =
 commands =
     coverage run --source='aws_pubsub' ./runtests.py
     coverage report -m
-[testenv:pylint]
+
+[testenv:flake8]
 deps =
-    -r{toxinidir}/requirements.txt
-    pylint
-    pylint-django
+    black
+    flake8
+    flake8-bugbear
+    flake8-black
+    flake8-docstrings
 commands =
-    pylint --load-plugins pylint_django aws_pubsub --ignore='migrations'
+    flake8 .
