--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-     - image: circleci/python:3.7.3
+     - image: circleci/python:3.8.1
     working_directory: ~/app
     steps:
       - checkout  
       - run: sudo chown -R circleci:circleci /usr/local/bin
-      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.8/site-packages
       - restore_cache:  
           key: v1-{{ .Branch }}-{{ checksum "requirements.txt" }}    
       - run:
@@ -17,11 +17,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            tox
-      - run:
-          name: Run linter
-          command: |
-            tox -e pylint
+            tox -e=py38
 
       - save_cache:
           key: v1-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -29,7 +25,7 @@ jobs:
             - ".tox"
             - ".venv"
             - "/usr/local/bin"
-            - "/usr/local/lib/python3.7/site-packages"
+            - "/usr/local/lib/python3.8/site-packages"
       - run:
           name: Update coverage
           command: |
