--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,6 +17,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox
+    - uses: actions/cache@v1
+      with:
+        path: ~/.tox
+        key: ${{ runner.os }}-tox-${{ hashFiles('**/tox.ini') }}
+        restore-keys: |
+          ${{ runner.os }}-tox-:
     - name: Run Tests
       run: |
         tox -e=py38
