--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
 commands =
     coverage run --source='aws_pubsub' ./runtests.py
     coverage report -m
+    coverage html
 
 [testenv:flake8]
 deps =
