--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,11 @@ skipsdist = True
 [testenv]
 deps =
     -r{toxinidir}/requirements.txt
-    coverage
+    coverage<5.0.0
 commands =
     coverage run --source='aws_pubsub' ./runtests.py
     coverage report -m
-    coverage html
+    coverage xml
 
 [testenv:flake8]
 deps =
